# oneroster-gradebook-reference

./: .gitignore  CONTRIBUTING.md  OneRoster-Gradebook-Implementation-Guide.md  README.md  SECURITY.md
docs/: PHASE1_COMPLETION_REPORT.md  PROJECT_ROADMAP.md
docs/architecture/: system-architecture.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md
implementations/java/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pom.xml
implementations/nodejs/: .dockerignore  .env.example  .env.test  .eslintrc.js  Dockerfile  Dockerfile.dev  Makefile  README.md  TEST_RESULTS.md  docker-compose.test.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json
implementations/nodejs/coverage/: clover.xml  coverage-final.json  lcov.info
implementations/nodejs/src/: app.js  index.js
implementations/nodejs/tests/: setup.js
implementations/python/: .env.example  Dockerfile  Makefile  README.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml
implementations/python/src/: main.py
implementations/python/src/config/: __init__.py  database.py  settings.py
implementations/python/src/middleware/: __init__.py  auth.py
implementations/python/src/models/: __init__.py  models.py
implementations/python/src/routers/: __init__.py  categories.py  line_items.py  results.py
implementations/python/src/schemas/: __init__.py  schemas.py
implementations/python/src/services/: __init__.py  category_service.py  line_item_service.py  result_service.py
implementations/python/src/utils/: __init__.py  query_parser.py
implementations/python/tests/: __init__.py  conftest.py  test_categories.py  test_database.py  test_line_items.py  test_main.py  test_oauth.py  test_query_parser.py  test_results.py  test_schemas.py  test_settings.py
shared/database/: schema.sql
(+85 files in other folders)
